--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,21 @@
+{% load static %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<!-- <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/favicon.ico"/> -->
-		<link rel="shortcut icon" type="image/png" href="{{ STATIC_URL }}favicon.ico"/>
-		<script src="{{ STATIC_URL }}{{ manual_aframe|default:'js/A-Frame/aframe.min.js' }}"></script>
-		<script src="{{ STATIC_URL }}{{ manual_literoomjs|default:'js/LITEroomJS/LITEroom_0.38.js' }}"></script>
-		<link href="{{ STATIC_URL }}css/immersive_style.css" rel="stylesheet"/>
+		<link rel="shortcut icon" type="image/png" href="{% static "favicon.ico" %}"/>
+		<script src="{% static manual_aframe|default:"js/A-Frame/aframe.min.js" %}"></script>
+		<script src="{% static manual_literoomjs|default:"js/LITEroomJS/LITEroom_0.38.js" %}"></script>
+		<link href="{% static "css/immersive_style.css" %}" rel="stylesheet"/>
 		<title>{{ title_text|default:"Immersive Tech" }}</title>
 	</head>
 	<body style="margin : 0px; overflow: hidden;">
 		{% block body_block %}
 		{% endblock %}
 		<!-- FOOTER CODE -->
-		<script src="{{ STATIC_URL }}js/jQuery/jquery-3.3.1.min.js"></script>
-		<script src='{{ STATIC_URL }}js/jQuery/jquery.contextMenu-2.6.4.min.js'></script>
-		<script src='{{ STATIC_URL }}js/helper_functions_vr.js'></script>
+		<script src="{% static "js/jQuery/jquery-3.3.1.min.js" %}"></script>
+		<script src="{% static "js/jQuery/jquery.contextMenu-2.6.4.min.js" %}"></script>
+		<script src="{% static "js/helper_functions_vr.js" %}"></script>
 		<script>
 		<!--
 			$(document).ready(function() {
@@ -22,6 +23,6 @@
 			});
 		-->
 		</script>
-		<script src='{{ STATIC_URL }}js/helper_functions.js'></script>
+		<script src="{% static "js/helper_functions.js" %}"></script>
 	</body>
 </html>
